# autoclicker

./: CMakeLists.txt  README.md  clicker.cpp  clicker.h  main.cpp
